console scrolls down automatically. Also fixed a bug with the showconsole button being stuck behind the scrollbar

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -6,6 +6,7 @@ body {
     width: 100%;
     background-color: #F8F8F8;
     font-family: 'Jura', sans-serif;
+    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.4);
 }
 
 p {
